fix scrolling/slider problems on mobile

--- a/src/assets/css/webflow.css
+++ b/src/assets/css/webflow.css
@@ -54,6 +54,13 @@ body {
   line-height: 20px;
   color: #333;
 }
+
+body.no-scroll, html.no-scroll {
+  position: fixed;
+  overflow: hidden;
+  height: 100%;
+}
+
 img {
   max-width: 100%;
   vertical-align: middle;
